# reference-format

./: .gitignore  README.md  app.py  main.py  main.tex  manage.py  pyproject.toml  ref.bib  ref_cleaned.txt  ref_formatted.txt  runtime_paths.py  todo.txt
api/: __init__.py  routes.py
cli/: __init__.py  main.py
core/: __init__.py
core/bibliography/: __init__.py  formatter.py  manager.py
llm-based/: prompt.txt
rule-based/: format.py
services/: __init__.py  bibliography_service.py
templates/: index.html
test-data/: test.bib  test.tex  test_label.txt
