[project]
name = "reference-format"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "bibtexparser>=1.4.4",
    "fastapi>=0.116.1",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.20",
    "titlecase>=2.4.1",
    "uvicorn>=0.35.0",
]
